tests/ui/ast_literal.stderr
error[E0505]: cannot move out of `term` because it is borrowed
 --> $DIR/ast_literal.rs:7:10
  |
6 |     let lit = ast::Literal::from_term(ast::Sign::NoSign, &term);
  |                                                          ----- borrow of `term` occurs here
7 |     drop(term);
  |          ^^^^ move out of `term` occurs here
8 |     let _end = lit;
  |                --- borrow later used here

For more information about this error, try `rustc --explain E0505`.
